--- a/components/Login.css
+++ b/components/Login.css
@@ -3,16 +3,18 @@
     display: inline-block;
     align-items: center;
     justify-content: center;
-    padding-top: 200px;
+    padding-top: 150px;
     width: 207vh;
-    height: 73vh;
+    height: 100vh;
     background: linear-gradient(rgb(255, 213, 241), rgb(148, 131, 173))
   }
   
-  .login-photo,
-  .login-form {
+  .login-photo {
     display: inline-block;
     vertical-align: middle; 
+    /* padding-inline: 100px; */
+    margin-left: 300px;
+    margin-bottom: 250px;
   }
 
   .login-form {
@@ -21,39 +23,50 @@
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: inline-block;
-    height: 300px;
+    height: 320px;
+    padding-inline: 50px;
+    vertical-align: top; 
     
+    /* justify-content: center; */
+    /* align-items: center; */
   }
   
   .login-form h2 {
     color: rgb(0, 0, 0);
-    font-size: 48px;
+    font-size: 32px;
     font-weight: 700; 
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-bottom: 25px;
+    text-align: center;
+    /* margin-left: 100px */
   }
   
   .login-form label {
     display: block;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin-bottom: 5px;
+    font-size: 12px;
+
   }
   
   .login-form input {
-    width: 90%;
-    padding: 10px;
+    width: 300px;
+    padding: 3px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
   
   .login-form button {
-    width: 50%;
-    padding: 10px;
+    width: 120px;
+    padding: 8px;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    margin-top: 10px;
+    margin-left: 80px;
   }
   
   .login-form button:hover {
