--- a/components/Login.css
+++ b/components/Login.css
@@ -4,9 +4,9 @@
     align-items: center;
     justify-content: center;
     padding-top: 150px;
-    width: 207vh;
+    width: 205vh;
     height: 100vh;
-    background: linear-gradient(rgb(255, 213, 241), rgb(148, 131, 173))
+    background: linear-gradient(#fff, #bfdbfe)
   }
   
   .login-photo {
@@ -20,12 +20,14 @@
   .login-form {
     background-color: #fff;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 0px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: inline-block;
-    height: 320px;
+    height: 420px;
+    width: 450px;
     padding-inline: 50px;
     vertical-align: top; 
+    
     
     /* justify-content: center; */
     /* align-items: center; */
@@ -33,7 +35,7 @@
   
   .login-form h2 {
     color: rgb(0, 0, 0);
-    font-size: 32px;
+    font-size: 42px;
     font-weight: 700; 
     margin-top: 30px;
     margin-bottom: 25px;
@@ -45,13 +47,13 @@
     display: block;
     /* font-weight: bold; */
     margin-bottom: 5px;
-    font-size: 12px;
+    font-size: 18px;
 
   }
   
   .login-form input {
-    width: 300px;
-    padding: 3px;
+    width: 350px;
+    padding: 5px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -65,8 +67,8 @@
     border: none;
     border-radius: 3px;
     cursor: pointer;
-    margin-top: 10px;
-    margin-left: 80px;
+    margin-top: 20px;
+    margin-left: 110px;
   }
   
   .login-form button:hover {
